[project]
name = "c-pair-trading"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = [
    "pyportfolioopt>=1.5.6",
    "yfinance>=0.2.51",
    "torch>=2.5.1",
    "vectorbt>=0.27.0",
    "pytorch>=1.0.2",
    "arctic>=1.82.2",
    "torchvision>=0.20.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
